deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: kumojin-event.com 
      http:
        paths:
          - path: /ke 
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service
                port: 80
